# keepass-cli

./: Cargo.toml  Dockerfile  README.md  example-AES-256-KDF-Q12345.kdbx  read.me
.cargo/: config.toml
src/: main.rs
src/kdbx/: consts.rs  content.rs  decompress.rs  kdbxReader.rs  kdbx_header.rs  kdbx_reader.rs  kdbx_writer.rs  key.rs  mod.rs  result.rs  utils.rs  variant_dictionary.rs
src/kdbx/crypt/: ciphers.rs  hmac_block_stream.rs  kdf.rs  mod.rs
testfiles/: AES-256-KDF-nonzip-Q12345.kdbx  AES-256-KDF-zip-Q12345.kdbx
