[package]
name = "keepass-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-sha256 = "0.1.7"
sha2 = "0.9.8"
hex-literal = "0.3"
aes = "0.7"
block-modes = "0.8"
base64 = "0.13"
xml-rs = "0.8"
byteorder = "1"
rust-argon2 = "0.8"
hmac = "0.11"
cipher = "0.3"
minidom = "0.13.0"
salsa20 = "0.8"
chacha20 = "0.7"
twofish = "0.6"
flate2 = "1"
